Add comments to .env.example explaining codespace name placeholder

--- a/octofit-tracker/frontend/.env.example
+++ b/octofit-tracker/frontend/.env.example
@@ -1,1 +1,4 @@
+# Replace YOUR_CODESPACE_NAME with your actual GitHub Codespace name
+# You can find it by running: echo $CODESPACE_NAME
+# Example: super-tribble-abc123xyz
 REACT_APP_CODESPACE_NAME=YOUR_CODESPACE_NAME
